notoriOS.cydsn/BUILD.log
--------------- Build Started: 08/05/2021 10:30:00 Project: notoriOS, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\dantz\AppData\Local\Cypress Semiconductor\PSoC Creator\4.4" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "G:\My Drive\notoriOS\notoriOS\notoriOS.cydsn\notoriOS.cyprj" -d CY8C5888LTI-LP097 -s "G:\My Drive\notoriOS\notoriOS\notoriOS.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
ADD: fit.M0032: warning: Clock Warning: (Debug_UART_IntClock's accuracy range '923.077 kHz +/- 4%, (886.154 kHz - 960 kHz)' is not within the specified tolerance range '921.6 kHz +/- 3.937%, (885.313 kHz - 957.887 kHz)'.).
 * C:\Program Files (x86)\Cypress\PSoC Creator\4.4\PSoC Creator\psoc\content\CyComponentLibrary\CyComponentLibrary.cylib\UART_v2_50\UART_v2_50.cysch (Instance:IntClock)
 * G:\My Drive\notoriOS\notoriOS\notoriOS.cydsn\notoriOS.cydwr (Debug_UART_IntClock)
ADD: fit.M0032: warning: Clock Warning: (UART_Telit_IntClock's accuracy range '923.077 kHz +/- 4%, (886.154 kHz - 960 kHz)' is not within the specified tolerance range '921.6 kHz +/- 3.937%, (885.313 kHz - 957.887 kHz)'.).
 * C:\Program Files (x86)\Cypress\PSoC Creator\4.4\PSoC Creator\psoc\content\CyComponentLibrary\CyComponentLibrary.cylib\UART_v2_50\UART_v2_50.cysch (Instance:IntClock)
 * G:\My Drive\notoriOS\notoriOS\notoriOS.cydsn\notoriOS.cydwr (UART_Telit_IntClock)
ADD: fit.M0029: information: Voltage Reference Information: Vref 'Default <1.024V>' is connected to terminal 'vplus' of '\ADC:DSM\' but no direct hardware connection exists.
 * C:\Program Files (x86)\Cypress\PSoC Creator\4.4\PSoC Creator\psoc\content\CyComponentLibrary\CyComponentLibrary.cylib\ADC_DelSig_v3_30\PSoC5\ADC_DelSig_v3_30.cysch (Instance:DSM)
 * G:\My Drive\notoriOS\notoriOS\notoriOS.cydsn\TopDesign\TopDesign.cysch (Instance:vRef_1)
HDL Generation...
Synthesis...
Tech Mapping...
ADD: pft.M0040: information: The following 3 pin(s) will be assigned a location by the fitter: \emFile:miso0(0)\, \emFile:mosi0(0)\, \emFile:sclk0(0)\
Analog Placement...
Info: apr.M0002: Analog signal "\ADC:Net_35\" is connected to one terminal only. (App=cydsfit)
Log: apr.M0058: The analog placement iterative improvement is 59% done. (App=cydsfit)
Log: apr.M0058: The analog placement iterative improvement is 76% done. (App=cydsfit)
Analog Routing...
Analog Code Generation...
Info: apr.M0060: Comparator 'Comparator[0]@[FFB(Comparator,0)]' is powered up by analog subsystem to support an auto-enabled vref. (App=cydsfit)
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
python ../build_tools/get_commit_hash.py
545820afb376cb3351f3f39b45e322f7d5c61b99 d5b476b2afa58cbb97fffd789177649e275d1010 Travis Adrian Dantzer <47285626+dantzert@users.noreply.github.com> 1628098432 -0400
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I..\emFile_V322c\Code\Include\PSoC5 -I..\emFile_V322c\Code\Include\PSoC5\emf32nOS -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/level_sensor.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -O0 -c level_sensor.c -o .\CortexM3\ARM_GCC_541\Debug\level_sensor.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I..\emFile_V322c\Code\Include\PSoC5 -I..\emFile_V322c\Code\Include\PSoC5\emf32nOS -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/sd_card.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -O0 -c sd_card.c -o .\CortexM3\ARM_GCC_541\Debug\sd_card.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I..\emFile_V322c\Code\Include\PSoC5 -I..\emFile_V322c\Code\Include\PSoC5\emf32nOS -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/voltages.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -O0 -c voltages.c -o .\CortexM3\ARM_GCC_541\Debug\voltages.o
voltages.c: In function 'pressure_sensor_readings':
voltages.c:87:11: warning: unused variable 'channels' [-Wunused-variable]
     float channels[AMux_CHANNELS];
           ^
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I..\emFile_V322c\Code\Include\PSoC5 -I..\emFile_V322c\Code\Include\PSoC5\emf32nOS -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/modem.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -O0 -c modem.c -o .\CortexM3\ARM_GCC_541\Debug\modem.o
modem.c: In function 'get_cell_network_stats':
modem.c:432:9: warning: unused variable 'match' [-Wunused-variable]
     int match = sscanf(uart_received_string,"\r\n+CESQ: %d,%d,%d,%d,%d,%d%*s",
         ^
modem.c: In function 'get_updated_parameters_from_malcom':
modem.c:481:65: error: 'valve_open_desired' undeclared (first use in this function)
         extract_string(uart_received_string,"Valve_Open: ","\r",valve_open_desired);
                                                                 ^
modem.c:481:65: note: each undeclared identifier is reported only once for each function it appears in
modem.c:482:9: error: 'success' undeclared (first use in this function)
         success = move_valve(valve_open_desired);
         ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 08/05/2021 10:31:14 ---------------
